--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,6 +83,13 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
+
+          # Ensure ECR_REPOSITORY is not empty to avoid invalid tag error
+          if [ -z "$ECR_REPOSITORY" ]; then
+            echo "ECR_REPOSITORY is not set. Please check your secrets configuration."
+            exit 1
+          fi
+
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
