--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -80,8 +80,7 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
           IMAGE_TAG: latest
         run: |
-          # Build a docker container and
-          # push it to ECR so that it can
+          # Build a docker container and push it to ECR so that it can
           # be deployed to ECS.
 
           # Ensure ECR_REPOSITORY is not empty to avoid invalid tag error
